@@ -132,6 +132,9 @@ Release 2.6.0 - UNRELEASED
     HDFS-6837. Code cleanup for Balancer and Dispatcher. (szetszwo via
     jing9)
 
+    HDFS-6838. Code cleanup for unnecessary INode replacement.
+    (Jing Zhao via wheat9)
+
   OPTIMIZATIONS
 
     HDFS-6690. Deduplicate xattr names in memory. (wang)
